<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:gravity="start"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/symptoms"
                style="@style/toolbarTextStyle"
                android:id="@+id/toolbarText"
                android:fontFamily="@fonts/montserrat_bold"/>

        </android.support.v7.widget.Toolbar>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/facebook"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym_title"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.2sp"
                    android:background="@color/grey"
                    android:id="@+id/view" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="8dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym1"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym2"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym3"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym4"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym5"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym6"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym7"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym8"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym9"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/sym10"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>