<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <TextView
                android:gravity="start"
                android:layout_gravity="start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prevention"
                style="@style/toolbarTextStyle"
                android:id="@+id/toolbarText"
                android:fontFamily="@fonts/montserrat_bold"/>

        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/facebook"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention1_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention1_desc"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/facebook"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention2_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention2_desc"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/facebook"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention3_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention3_desc"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/facebook"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention4_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention4_desc"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="5dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/facebook"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention5_title"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey"
                    android:layout_marginTop="3dp"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:layout_marginBottom="3dp"
                    android:text="@string/prevention5_desc"/>

            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>